# memoryobserver

./: .gitattributes  .gitignore  LICENSE  README.md
addon/: README.md  background.js  publish.sh
addon/base/: background.js
addon/base/options/: options.js
addon/base/popup/: popup.css  popup.html  popup.js
addon/manifests/: README.md  manifest.firefox
addon/manifests/chrome/: manifest.json
addon/manifests/edge/: manifest.json
addon/options/: options.html  options.js
addon/popup/: popup.html  popup.js
native/linux/: CMakeLists.txt  CmakeLists.txt  description-pak  makepkg.sh  manifest.chrome  manifest.firefox
native/src/: memoryobserver.cs
native/windows/: memoryobserver.csproj  memoryobserver.sln
native/windows/edge/: memoryobserverNativeForEdge.sln
native/windows/edge/memoryobserverNativeForEdge/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  memoryobserverNativeForEdge.csproj
native/windows/edge/memoryobserverNativeForEdge/Properties/: AssemblyInfo.cs
native/windows/edge/memoryobserverNativeForEdgeApp/: Program.cs  memoryobserverNativeForEdgeApp.csproj
native/windows/edge/memoryobserverNativeForEdgeApp/Properties/: AssemblyInfo.cs
native/windows/other/: manifest.json  memoryobserver.csproj
native/windows/other/Properties/: AssemblyInfo.cs  Settings.Designer.cs
native/windows/other/chrome/: manifest.json
native/windows/other/firefox/: manifest.json
native/windows/other/setup/: setup.vdproj
